got the display of transactions working
